script de bd creado

--- a/BD/Dockerfile
+++ b/BD/Dockerfile
@@ -2,4 +2,5 @@ FROM mysql:5.7
 ENV MYSQL_ROOT_PASSWORD admin123
 ENV MYSQL_DATABASE banca
 ENV MYSQL_ROOT_HOST %
+COPY bd.sql /docker-entrypoint-initdb.d/
 EXPOSE 3306 3306
