--- a/API/nodejs_code/package.json
+++ b/API/nodejs_code/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mysql": "^2.17.0"
+    "mysql": "^2.17.0",
+    "randomstring": "^1.1.5"
   }
 }
